--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node": "14.x"
+  },
   "scripts": {
-    "server": "nodemon server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
